# RM_2019_ws

./: .gitignore  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/roborts_msgs/: chassis_ctrl.h  chassis_info.h  feedback_ctrl.h  feedback_info.h  gimbal_ctrl.h  gimbal_info.h  referee_system.h
devel/lib/pkgconfig/: roborts_bringup.pc  roborts_msgs.pc  roborts_serial.pc  roborts_vision.pc
devel/lib/roborts_serial/: serial_node
devel/lib/roborts_vision/: roborts_vision_node
devel/share/roborts_bringup/cmake/: roborts_bringupConfig.cmake
devel/share/roborts_msgs/cmake/: roborts_msgs-msg-extras.cmake  roborts_msgs-msg-paths.cmake  roborts_msgsConfig.cmake
devel/share/roborts_serial/cmake/: roborts_serialConfig.cmake
devel/share/roborts_vision/cmake/: roborts_visionConfig.cmake
src/8.6 No.4/: README.md
src/8.6 No.4/roborts_bringup/launch/: robot1.launch  robot2.launch  robot3.launch  robot7.launch
src/8.6 No.4/roborts_msgs/: CMakeLists.txt
src/8.6 No.4/roborts_msgs/chassis/: chassis_ctrl.msg  chassis_info.msg
src/8.6 No.4/roborts_msgs/feedback/: feedback_ctrl.msg  feedback_info.msg
src/8.6 No.4/roborts_msgs/gimbal/: gimbal_ctrl.msg  gimbal_info.msg
src/8.6 No.4/roborts_msgs/referee_system/: referee_system.msg
src/8.6 No.4/roborts_serial/: CMakeLists.txt  README.md  package.xml
src/8.6 No.4/roborts_serial/serial/: proto_define.h  serial_node.cpp
src/8.6 No.4/roborts_vision/: CMakeLists.txt  dep.h  package.xml
src/8.6 No.4/roborts_vision/detect_factory/: CMakeLists.txt  pnp_solver.h
(+61 files in other folders)
